--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1", features = ["full"] }
 http-body-util = "0.1.0-rc.3"
 hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
 bytes = "1.5.0"
+chrono = "0.4.31"
