--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ http-body-util = "0.1.0-rc.3"
 hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
 bytes = "1.5.0"
 chrono = "0.4.31"
+mime_guess = "2.0.5"
 
 [profile.release]
 strip = true  # Automatically strip symbols from the binary.
